--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ header {
 
 h1 {
   font-family: "Raleway", sans-serif;
-  /*color: #0D2C40;*/
   letter-spacing: 1px;
   font-weight: 400;
   font-size: 45px;
@@ -20,13 +19,13 @@ h1 {
 
 nav {
   background-color: #00A6B3;
-  color: #FFFFFF;
   padding: 20px 0;
 }
 
 a {
   font-family: "Raleway", sans-serif;
-  /*color: #F15B31;*/
+  color: #FFFFFF;
+  text-decoration: none;
   letter-spacing: 1px;
   font-weight: 600;
   font-size: 18px;
